@@ -132,6 +132,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13968: The glob module now supports recursive search in
+  subdirectories using the "**" pattern.
+
 - Issue #21951: Fixed a crash in Tkinter on AIX when called Tcl command with
   empty string or tuple argument.
 
